--- a/views/pizza.jade
+++ b/views/pizza.jade
@@ -1,7 +1,10 @@
 doctype html
 html(lang="en")
-  head
-    title= title
-  body
-    h1= title
-    h1= pizza.name
+head
+	title= title
+body
+	h1= title
+	h1= pizza.name
+	ul
+		each val in pizza.toppings
+			li= val
